# midimachine

./: README.md
frontend/: README.md  package-lock.json  package.json
frontend-non-ts/: package-lock.json
frontend-non-ts/public/: musicgen_bg.wasm
frontend/public/: musicgen.js  musicgen_bg.wasm  package.json
musicgen/: Cargo.toml  build.rs  build_wasm.sh  dbg_wasm.sh  debug_build.sh  generate_midi_files.sh  rust-toolchain.toml  switch_target.sh
musicgen/.cargo/: config.toml
musicgen/benches/: generation.rs  pruning.rs
musicgen/output/: chords-1685763577.mid  chords-1685763945.mid  chords-1685764082.mid  chords-1686144601.mid  chords-1687296737.mid  chords-1687296869.mid  chords-1687296969.mid  chords-1687297096.mid  chords-1687297221.mid  chords-1687297311.mid  chords-1687297421.mid  chords-1687298201.mid  chords-1687298365.mid  chords-1687299594.mid  chords-1687300997.mid  chords-1687301264.mid  chords-1687301326.mid  chords-1687301410.mid  chords-1687301714.mid  chords-1687301787.mid  chords-1687301855.mid  chords-1687302019.mid  chords-1687302321.mid  chords-1687302583.mid  chords-1687302867.mid  chords-1687302975.mid  chords-1687303228.mid  chords-1687312843.mid  chords-1687313452.mid  chords-1687313561.mid  chords-1687313636.mid  chords-1687313760.mid  chords-1687313816.mid  chords-1687313838.mid  chords-1687313855.mid  chords-1687313990.mid  chords-1687314067.mid  chords-1687314102.mid  chords-1690475678.mid  chords-1690475850.mid  (+16 more)
musicgen/src/: lib.rs  main.rs
musicgen/src/music_modules/: chord.rs  chord_type.rs  mod.rs  music.rs  utils.rs
musicgen/src/music_modules_v2/: chord.rs  chord_type.rs  error.rs  midi.rs  mod.rs  music.rs  patterns.rs  pruning.rs  utils.rs
musicgen/src/music_modules_v2/utils/: mod.rs  sets.rs  statistics.rs  tests.rs  utils.rs
musicgen/src/my_modules/error/: into.rs  mod.rs  new.rs
musicgen/tests/: mutation_tests.rs
musicgen/tests/blobs/: chords_a.mid  chords_b.mid  chords_c.mid  chords_d.mid  config1.mid  config3.mid  intended_a.mid  intended_b.mid  intended_c.mid  intended_d.mid  melody_a.mid  melody_b.mid  melody_c.mid  melody_d.mid  melody_v2_a.mid  melody_v2_b.mid  melody_v2_c.mid  melody_v2_d.mid
(+38 files in other folders)
