[package]
name = "musicgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "generation"
harness = false

[dependencies]
base64 = "0.22.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.72"
midly = "0.5.3"
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "std"] }
serde = "1.0.215"
serde_json = "1.0.132"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 'z'     # optimize for size
lto = true          # enable link time optimization
panic = 'abort'     # reduce binary size by not including panic messages
codegen-units = 1   # fewer codegen units for better optimization
strip = true        # strip debug symbols

[profile.bench]
panic = 'abort'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false               # removes debug info from the generated js glue code
demangle-name-section = false       # controls whether function names are readable in stack traces
dwarf-debug-info = false            # removes DWARF debug info
omit-default-module-path = false    # removes default module path